--- a/src/main/resources/public/registration.html
+++ b/src/main/resources/public/registration.html
@@ -4,7 +4,7 @@
       <link href="formlayout.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
-    <form id="OpenIdRegister" action="/register" method="post">
+    <form id="OpenIdRegister" action="/registerauth" method="post">
       <h1>Please provide you OpenID below to register with this site.</h1>
       <br />
       <table border="0">
