--- a/src/main/resources/private/private.html
+++ b/src/main/resources/private/private.html
@@ -2,3 +2,4 @@
 <p>
 You logged into our secure private area! 
 </p>
+<p> You can <a href="/logout">logout</a> so that you can then lock back in again after having registered. </p>
